# Math-library

./: .gitignore  CMakeLists.txt  README.md  abs.cpp  math.cpp  math.h  pow.cpp  sqrt.cpp
include/libmath/: abs.hpp  cbrt.hpp  exp.hpp  fmod.hpp  hypot.hpp  ln.hpp  math.h  math.hpp  pgcd.hpp  pow.hpp  sqrt.hpp
src/: abs.cpp  abs.tpp  cbrt.cpp  exp.tpp  extract_decimal.cpp  fmod.tpp  fract.cpp  fract.h  hypot.cpp  ln.tpp  pgcd.cpp  pgcd.tpp  pow.cpp  pow.tpp  sqrt.cpp
